@@ -131,7 +131,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADE
-        CAAAAk1TRnQBSQFMAgEBAwEAAWABBwFgAQcBEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        CAAAAk1TRnQBSQFMAgEBAwEAAWgBBwFoAQcBEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABEAMAAQEBAAEYBgABDOMAAf8CAAH/AgAB/wIAAf8CAAH/AgAB/wIAAf8MAAHHAX4BWAHaAdABzAHa
         Ac4ByAHYAcsBxQHYAckBwgHYAccBwAHXAcUBuwHVAcABuAHUAb4BswHUAbsBsAHTAbkBrAHSAbcBqgHS
         AbQBpQHQAbIBpAHRAbEBoQHPAa4BnhgAA/9TAAH/AgAB/wIACv8CAAH/AgAB/wIAAf8JAAHNAYIBXgH6
@@ -191,7 +191,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABm
-        UwAAAk1TRnQBSQFMAgEBDAEAAWABDQFgAQ0BGAEAARgBAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        UwAAAk1TRnQBSQFMAgEBDAEAAWgBDQFoAQ0BGAEAARgBAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFg
         AwABYAMAAQEBAAEYBgABbP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
         /wD/AP8A/wD/AEIAA/4D+wPzA+0D6wPuA/YD+wP+A/8qAAPtA8QDkANcBjMDXAOQA8QD7TMAA/4G/QP+
         PAAD/gb9A/4qAAP/A/wD9QPpA9gDxAO4A7UDugPKA9sD6wP3A/0hAAPrA6cDPQM+A0QDRwZKA0cDRAM+
@@ -550,7 +550,7 @@
 </value>
   </data>
   <metadata name="exportHistoryContextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>1598, 17</value>
+    <value>1598, 21</value>
   </metadata>
   <metadata name="rawViewContextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1402, 17</value>
