@@ -36,7 +36,8 @@ Some SSH agent edit windows are now resizable.
 -------------
 Version 5.0.5
 *************
-Exporting of Collector host state history metrics (for reporting)
+Exporting of Collector host state history metrics (for reporting) 
 	Collector host history (specific collector)
 	Monitor pack history (All collector histories)
+	CSV and XML formats
 Error icon changed to red triangle
